<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:layout_margin="10dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/content_item_user_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/user"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/content_item_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="17sp"
        android:layout_toEndOf="@id/content_item_user_image"/>

    <TextView
        android:id="@+id/content_item_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_time"
        android:textSize="15sp"
        android:layout_below="@id/content_item_user_name"
        android:layout_toEndOf="@id/content_item_user_image"/>

    <TextView
        android:id="@+id/content_item_post_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_location"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/content_item_user_name"
        android:layout_toEndOf="@id/content_item_post_time"/>

    <TextView
        android:id="@+id/content_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/content_item_user_image"
        android:textSize="21sp"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/content_item_content_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/content_item_title"
        android:textSize="19sp"
        android:text="@string/content"/>

    <Button
        android:id="@+id/content_item_like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_item_content_preview"
        android:text="@string/like"/>

    <Button
        android:id="@+id/content_item_useful_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/content_item_content_preview"
        android:text="@string/useful"/>

    <Button
        android:id="@+id/content_item_reply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_item_content_preview"
        android:layout_alignParentEnd="true"
        android:text="@string/reply"/>


</RelativeLayout>