<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/food_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/food_category"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/food_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/food_item_icon"
        android:text="@string/food_name"/>

    <TextView
        android:id="@+id/food_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/food_item_icon"
        android:layout_below="@id/food_item_name"
        android:text="@string/food_category"/>

    <TextView
        android:id="@+id/food_item_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/food_item_icon"
        android:layout_below="@id/food_item_category"
        android:text="@string/amount"/>

    <TextView
        android:id="@+id/food_item_shelf_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/food_item_icon"
        android:layout_below="@id/food_item_amount"
        android:text="@string/shelf_life"/>

    <Button
        android:id="@+id/food_item_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/edit"/>

    <Button
        android:id="@+id/food_item_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/food_item_edit_button"
        android:text="@string/remove"/>

    <Button
        android:id="@+id/food_item_replica_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/recipe_search"/>

    <Button
        android:id="@+id/food_item_packaging_recycling_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/packaging_recycling"/>

</RelativeLayout>